bakkie_derive/tests/ui/fail/app_attribute_on_tuple_type.rs
use bakkie_derive::tool;

#[tool]
async fn my_tool(#[app] app: (String, i32)) -> Result<String, String> {
    Ok("test".to_string())
}

fn main() {}