bakkie_derive/tests/ui/fail/app_attribute_on_tuple_type.stderr
error: Parameter with #[app] attribute must be of type App<T>
 --> tests/ui/fail/app_attribute_on_tuple_type.rs:4:30
  |
4 | async fn my_tool(#[app] app: (String, i32)) -> Result<String, String> {
  |                              ^^^^^^^^^^^^^
